[gd_scene load_steps=8 format=3 uid="uid://c3lx8ukcxprqm"]

[ext_resource type="Script" path="res://main.gd" id="1_xdei3"]
[ext_resource type="PackedScene" uid="uid://b8cydty340bc2" path="res://paddle.tscn" id="2_or24r"]
[ext_resource type="Script" path="res://background.gd" id="3_0l7n3"]
[ext_resource type="FontFile" uid="uid://bg3rgt2s8u2xq" path="res://pong_font/pong-score.ttf" id="4_sok6d"]
[ext_resource type="AudioStream" uid="uid://bh6i4f4rnvbds" path="res://pong_score.mp3" id="5_74a1w"]
[ext_resource type="PackedScene" uid="uid://csco6acg6q3mt" path="res://main_menu.tscn" id="6_46ev7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0sfb5"]
size = Vector2(37.3542, 98.938)

[node name="Main" type="Node"]
script = ExtResource("1_xdei3")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("3_0l7n3")

[node name="WallTop" type="StaticBody2D" parent="."]
position = Vector2(0, 104)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="WallTop"]
offset_left = 72.0
offset_right = 127.0
offset_bottom = 64.0
scale = Vector2(32.2941, 0.754288)
size_flags_vertical = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2(960, 24)
scale = Vector2(47.5448, 0.485153)
shape = SubResource("RectangleShape2D_0sfb5")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2(0, 1032)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="WallBottom"]
offset_left = 72.0
offset_right = 127.0
offset_bottom = 64.0
scale = Vector2(32.2941, 0.754288)
size_flags_vertical = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2(960, 24)
scale = Vector2(47.5448, 0.485153)
shape = SubResource("RectangleShape2D_0sfb5")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="PaddleLeft" parent="." instance=ExtResource("2_or24r")]
position = Vector2(0, 640)
top_limit = 96
using_w_s = true

[node name="PaddleRight" parent="." instance=ExtResource("2_or24r")]
position = Vector2(1878, 640)
top_limit = 96

[node name="ScoreLeft" type="Label" parent="."]
offset_left = 416.0
offset_top = 8.0
offset_right = 608.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("4_sok6d")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="ScoreRight" type="Label" parent="."]
offset_left = 1336.0
offset_top = 8.0
offset_right = 1528.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("4_sok6d")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_74a1w")

[node name="MainMenu" parent="." instance=ExtResource("6_46ev7")]

[node name="LabelW" type="Label" parent="."]
offset_left = 32.0
offset_top = 128.0
offset_right = 72.0
offset_bottom = 151.0
text = "W"
horizontal_alignment = 1

[node name="LabelS" type="Label" parent="."]
offset_left = 24.0
offset_top = 1032.0
offset_right = 64.0
offset_bottom = 1055.0
text = "S"
horizontal_alignment = 1

[node name="LabelUp" type="Label" parent="."]
offset_left = 1856.0
offset_top = 128.0
offset_right = 1896.0
offset_bottom = 151.0
text = "Up"
horizontal_alignment = 1

[node name="LabelDown" type="Label" parent="."]
offset_left = 1856.0
offset_top = 1032.0
offset_right = 1901.0
offset_bottom = 1055.0
text = "Down"
horizontal_alignment = 1

[connection signal="restarted" from="MainMenu" to="." method="_on_main_menu_restarted"]
